# ft

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
ft-core/: Cargo.toml
ft-core/proptest-regressions/graph/: query.txt
ft-core/src/: blame_cache.rs  config.rs  daily.rs  dates.rs  error.rs  frontmatter.rs  fs.rs  gather.rs  git.rs  history.rs  journal.rs  lib.rs  link_review.rs  markdown.rs  notes.rs  periodic.rs  pulse.rs  recent.rs  related.rs  search.rs  selector.rs  vault.rs
ft-core/src/graph/: delete.rs  drift.rs  ghosts.rs  mod.rs  parser.rs  preset.rs  query.rs  rename.rs  resolve.rs  tests.rs
ft-core/src/graph/query/: display.rs  eval.rs  lexer.rs  mod.rs  tests.rs  (+1 more)
ft-core/src/notes/: append.rs  template.rs
ft-core/src/query/: filter.rs  mod.rs  preset.rs  sort.rs
ft-core/src/synth/: accrete.rs  callout.rs  citations.rs  mod.rs  repair.rs  reslice.rs  scaffold.rs  verify.rs
ft-core/src/task/: aging.rs  emoji.rs  hierarchy.rs  mod.rs  ops.rs  recurrence.rs  resolve.rs
ft-core/src/timeblock/: report.rs
ft-core/tests/: graph_query_matrix.rs  real_vault.rs  templates.rs
ft-core/tests/snapshots/: templates__daily.snap  templates__father-watson.snap  templates__goal-checkin.snap  templates__inbox.snap  templates__new.snap  templates__progress-checkin.snap  templates__proj.snap  templates__quarterly.snap  templates__quick-add.snap  templates__restaurant.snap  templates__stry.snap  templates__tags.snap  templates__tasks-in-this-path.snap  templates__travel.snap  templates__weeks.snap  templates__wrklg.snap
(+725 files in other folders)
