[package]
name = "ft-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
figment = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
assert_fs = { workspace = true }
